migrate certbot from deb to snap for cloudflare
Cloudflare API token requires v2.3.1 of the python module, but it wasn't
straightforward to backport it to focal.

--- a/roles/prometheus/tasks/main.yml
+++ b/roles/prometheus/tasks/main.yml
@@ -48,3 +48,12 @@
     name: grafana-server
     enabled: yes
     state: started
+
+- name: certbot-dns-cloudflare - allow the plugin
+  command: snap set certbot trust-plugin-with-root=ok
+  changed_when: False
+
+- name: certbot-dns-cloudflare - install
+  snap:
+    name: certbot-dns-cloudflare
+    state: present
