use prometheus_scrape_configs.yml

--- a/roles/prometheus/tasks/main.yml
+++ b/roles/prometheus/tasks/main.yml
@@ -13,17 +13,7 @@
 - name: scrape node-exporter
   blockinfile:
     path: /var/snap/prometheus/current/prometheus.yml
-    block: |2
-        - job_name: 'grafana_metrics'
-          static_configs:
-          - targets: ['localhost:2990']
-
-        - job_name: node
-          static_configs:
-          - targets:
-            - 'localhost:9100'
-            - 'darkbox.t.739141.xyz:9100'
-            - 'tokyo-jumpbox.t.739141.xyz:9100'
+    block: "{{ lookup('file', 'files/prometheus_scrape_configs.yml') }}"
 
 - name: restart prometheus
   systemd:
