--- a/roles/demultiplexer/files/sslh.cfg
+++ b/roles/demultiplexer/files/sslh.cfg
@@ -5,7 +5,8 @@ user: "sslh";
 
 listen:
 (
-    { host: "0.0.0.0"; port: "443"; }
+    { host: "0.0.0.0"; port: "443"; },
+    { host: "[::]"; port: "443"; }
 );
 
 protocols:
