Revert "listen on IPv6 too"
This reverts commit 1d81649e2cb1e464aea24e915b85d9a26f944842.

--- a/roles/demultiplexer/files/sslh.cfg
+++ b/roles/demultiplexer/files/sslh.cfg
@@ -5,8 +5,7 @@ user: "sslh";
 
 listen:
 (
-    { host: "0.0.0.0"; port: "443"; },
-    { host: "[::]"; port: "443"; }
+    { host: "0.0.0.0"; port: "443"; }
 );
 
 protocols:
