slight update to be closer to the generator
https://ssl-config.mozilla.org/#server=apache&version=2.4.41&config=intermediate&openssl=1.1.1f&ocsp=false&guideline=5.6

--- a/roles/web/files/sites-available/www-home.conf
+++ b/roles/web/files/sites-available/www-home.conf
@@ -11,13 +11,21 @@
     </Directory>
 
     RewriteEngine On
-    RewriteCond "%{REQUEST_URI}" "!^/\.well-known/"
+    RewriteCond %{REQUEST_URI} !^/\.well\-known/acme\-challenge/
     RewriteRule ^(.*)$ https://%{HTTP_HOST}$1 [R=301,L]
 </VirtualHost>
 
 <VirtualHost *:433>
     SSLEngine on
+
+    SSLCertificateFile /etc/letsencrypt/live/www.nobuto-murata.org/fullchain.pem
+    SSLCertificateKeyFile /etc/letsencrypt/live/www.nobuto-murata.org/privkey.pem
+
+    # enable HTTP/2, if available
     Protocols h2 http/1.1
+
+    # HTTP Strict Transport Security (mod_headers is required) (63072000 seconds)
+    Header always set Strict-Transport-Security "max-age=63072000"
 
     ServerName www.nobuto-murata.org
     ServerAlias nobuto-murata.org
@@ -43,15 +51,11 @@
     CustomLog ${APACHE_LOG_DIR}/access.log combined
 
     Header set Cache-Control "max-age=0"
-    Header set Strict-Transport-Security "max-age=31536000"
     Header set Content-Security-Policy "default-src 'none'; img-src 'self'; frame-ancestors 'none'; style-src 'self' fonts.googleapis.com cdnjs.cloudflare.com; font-src fonts.gstatic.com cdnjs.cloudflare.com;"
     Header set X-Frame-Options "DENY"
     Header set X-XSS-Protection "1; mode=block"
     Header set X-Content-Type-Options "nosniff"
     Header set Referrer-Policy "no-referrer, strict-origin-when-cross-origin"
-
-    SSLCertificateFile /etc/letsencrypt/live/www.nobuto-murata.org/fullchain.pem
-    SSLCertificateKeyFile /etc/letsencrypt/live/www.nobuto-murata.org/privkey.pem
 </VirtualHost>
 
 # intermediate configuration
