tweak virtual host too

--- a/roles/web/files/sites-available/000-fallback.apache2.conf
+++ b/roles/web/files/sites-available/000-fallback.apache2.conf
@@ -3,7 +3,7 @@
     DocumentRoot /var/www/nonexistent
 </VirtualHost>
 
-<VirtualHost *:433>
+<VirtualHost *:433 *:443>
     Servername nonexistent.localdomain
     DocumentRoot /var/www/nonexistent
 
