--- a/roles/web/files/sites-available/www-home.conf
+++ b/roles/web/files/sites-available/www-home.conf
@@ -15,7 +15,7 @@
     RewriteRule ^(.*)$ https://%{HTTP_HOST}$1 [R=301,L]
 </VirtualHost>
 
-<VirtualHost *:433>
+<VirtualHost *:433 *:443>
     SSLEngine on
 
     SSLCertificateFile /etc/letsencrypt/live/www.nobuto-murata.org/fullchain.pem
