--- a/roles/web/tasks/main.yml
+++ b/roles/web/tasks/main.yml
@@ -1,4 +1,10 @@
 ---
+- name: 'sysctl - LP: #1899852 for IPv6'
+  sysctl:
+    name: net.ipv6.ip_nonlocal_bind
+    value: 1
+    sysctl_file: /etc/sysctl.d/99-local.conf
+
 - name: apt install apache2
   apt:
     name: apache2
