--- a/roles/demultiplexer/tasks/main.yml
+++ b/roles/demultiplexer/tasks/main.yml
@@ -28,9 +28,9 @@
     sysctl_file: /etc/sysctl.d/99-local.conf
   with_items:
      - name: net.ipv4.conf.default.route_localnet
-       value: 1
+       value: '1'
      - name: net.ipv4.conf.all.route_localnet
-       value: 1
+       value: '1'
 
 - name: sslh transparent support - apply iptables rules to lo
   replace:
