--- a/roles/prometheus/files/prometheus_scrape_configs.yml
+++ b/roles/prometheus/files/prometheus_scrape_configs.yml
@@ -8,3 +8,8 @@
       - 'localhost:9100'
       - 'darkbox.t.739141.xyz:9100'
       - 'tokyo-jumpbox.t.739141.xyz:9100'
+
+  - job_name: apache
+    static_configs:
+    - targets:
+      - 'localhost:9117'
