commit the template without the actual targets

--- a/roles/prometheus/files/prometheus_scrape_configs.yml
+++ b/roles/prometheus/files/prometheus_scrape_configs.yml
@@ -30,3 +30,17 @@
         target_label: instance
       - target_label: __address__
         replacement: localhost:9115
+
+  - job_name: blackbox_icmp
+    metrics_path: /probe
+    params:
+      module: [icmp]
+    static_configs:
+      - targets: []
+    relabel_configs:
+      - source_labels: [__address__]
+        target_label: __param_target
+      - source_labels: [__param_target]
+        target_label: instance
+      - target_label: __address__
+        replacement: localhost:9115
