--- a/roles/web/files/sites-available/www-home.conf
+++ b/roles/web/files/sites-available/www-home.conf
@@ -51,7 +51,7 @@
     CustomLog ${APACHE_LOG_DIR}/access.log combined
 
     Header set Cache-Control "max-age=0"
-    Header set Content-Security-Policy "default-src 'none'; frame-ancestors 'none'; img-src 'self'; style-src 'self' 'unsafe-inline' fonts.googleapis.com cdnjs.cloudflare.com; font-src fonts.gstatic.com cdnjs.cloudflare.com; script-src 'unsafe-eval';"
+    Header set Content-Security-Policy "default-src 'none'; frame-ancestors 'none'; base-uri 'self'; form-action 'none'; img-src 'self'; style-src 'self' 'unsafe-inline' fonts.googleapis.com cdnjs.cloudflare.com; font-src fonts.gstatic.com cdnjs.cloudflare.com; script-src 'unsafe-eval';"
     Header set X-Frame-Options "DENY"
     Header set X-XSS-Protection "1; mode=block"
     Header set X-Content-Type-Options "nosniff"
